fix for focus scrollbar heck

--- a/docs/_sass/html.scss
+++ b/docs/_sass/html.scss
@@ -15,6 +15,7 @@ button:focus,
 a:hover,
 button:hover {
   outline: none;
+  position: relative;
 }
 
 a:focus:before,
